# fastapi-evloop-linter

./: .pre-commit-hooks.yaml  README.md  autoresearch.md  autoresearch.sh  benchmark.py  benchmark_unseen.py  pyproject.toml  test_adversarial.py  test_asyncio_run_blindspot.py  test_blind_spot_hunt.py  test_closure_blindspot.py  test_dict_dispatch.py  test_dotted_import_blindspot.py  test_env_discovery.py  test_getattr_blindspot.py  test_instance_attr_blindspot.py  test_nested_module_blindspot.py  test_new_adversarial.py  test_noise_suppression.py  test_reassign_blindspot.py  test_uvx_isolation.py  test_with_gap.py
.github/workflows/: publish.yml
src/fastapi_evloop_linter/: __init__.py  blockers.py  callgraph.py  checker.py  classifier.py  cli.py  endpoints.py  env.py  introspect.py  semantic.py
tests/: test_cli.py  test_semantic_analysis.py
tests/adversarial/: generator.py  unseen_modules.py
